--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <center>
 <h1>PIPELINE-LAB</h1>
-<p1> This is Abhi, I've sucessfiully created CI-CD pipeline using aws code comm$
+<p1> This is Abhi, I've sucessfiully created the BG lab$
 <p2> This is new commit of pipeline </p2>
 </center>
 
