--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 <body>
 <center>
+  body {
+  background-color: lightblue;
+}
 <h1>PIPELINE-LAB</h1>
-<p1> This is Abhi, I've sucessfiully created the BG lab$
+  <p1> This is Abhi, I've sucessfiully created the BG lab</p1>
+  <colour>red</colour>
 </center>
 
 </body>
